# pytroska

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  pyproject.toml
.claude/: index.json
python/pytroska/: CLAUDE.md  __init__.py  _pytroska_core.pyi  exceptions.py
rust/: CLAUDE.md  errors.rs  header.rs  info.rs  lib.rs  reader.rs
tests/: CLAUDE.md  conftest.py  test_errors.py  test_header.py  test_info.py  test_smoke.py
