[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[project]
name = "pytroska"
version = "0.1.0"
requires-python = ">=3.11"
description = "High-performance MKV file processing library"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Video",
    "Topic :: Utilities",
]

[tool.uv]
cache-keys = [
    { file = "Cargo.toml" },
    { file = "Cargo.lock" },
    { file = "rust/**/*.rs" },
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "pytroska._pytroska_core"

[tool.ruff]
target-version = "py311"
line-length = 88
src = ["python", "tests"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "A",   # flake8-builtins
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "PT",  # flake8-pytest-style
    "UP",  # pyupgrade
    "ANN", # flake8-annotations
    "SIM", # flake8-simplify
    "RUF", # ruff specific
]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["python/pytroska"]

[tool.isort]
line_length = 88
known_first_party = ["pytroska "]
src_paths = ["python", "tests"]
length_sort = true
multi_line_output = 9

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "isort>=8.0.1",
    "maturin>=1.12.6",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "ruff>=0.15.4",
]
